# OpenCV-Benchmarking

./: .gitignore  CMakeLists.txt  OpenCV_Build_Investigation.ods  README.md  benchmark-analysis.ipynb  benchmark-results.csv  benchmark.py  benchmark.sh  install-build.sh  main.cpp  simple.cpp
benchmark-results/: benchmark-results-20.csv  benchmark-results-200.csv  benchmark-results-5-2.csv  benchmark-results-5.csv  benchmark-results-test.csv  benchmark-results_01-26-2023_12:13:02.csv  benchmark-results_01-27-2023_05:40:17.csv  benchmark-results_01-28-2023_10:56:06.csv
benchmark-results/stash/: benchmark-results_01-26-2023_09:35:26.csv  benchmark-results_01-26-2023_10:23:37.csv  benchmark-results_01-27-2023_10:11:27.csv  benchmark-results_01-27-2023_13:53:36.csv
